implement feature to delete a meal
