# src/routes/meal.js
@@ -9,10 +9,11 @@ const { authenticate, isVerified } = AuthMiddleware;
 const { verifyRoles } = UserMiddleware;
 const {
   mealCheck, ingredientCheck, onMealCategory, mealCategoryCheck, beforeDeletingIngredient,
+  beforeDeletingMeal,
 } = MealMiddleware;
 const {
   newMeal, addIngredientToMeal, viewMeals, newCategory, addMealToCategory,
-  deleteIngredient, deleteMealFromCategory
+  deleteIngredient, deleteMealFromCategory, deleteMeal,
 } = MealController;
 const { admin } = PermissionsData;
 router.post('/', authenticate, verifyRoles(admin), isVerified, mealCheck, newMeal);
@@ -22,6 +23,7 @@ router.post('/category/', authenticate, verifyRoles(admin), isVerified, onMealCa
 router.post('/category/add-meal', authenticate, verifyRoles(admin), isVerified, mealCategoryCheck, addMealToCategory);
 router.delete('/:mealId/ingredient/:ingredientId', authenticate, verifyRoles(admin), isVerified, beforeDeletingIngredient, deleteIngredient);
 router.delete('/category/:categoryId/meal/:mealId', authenticate, verifyRoles(admin), isVerified, mealCategoryCheck, deleteMealFromCategory);
+router.delete('/:mealId', authenticate, verifyRoles(admin), isVerified, beforeDeletingMeal, deleteMeal);
 
 
 export default router;
